[gd_scene load_steps=2 format=3 uid="uid://bvatbre8e3he4"]

[ext_resource type="Script" path="res://ui/game_ui.gd" id="1_6x5hu"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6x5hu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Hoe" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Hoe"

[node name="Axe" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Axe"

[node name="Kettle" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Kettle"

[node name="Seed" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Seed"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/Hoe" to="." method="_on_hoe_pressed"]
[connection signal="pressed" from="HBoxContainer/Axe" to="." method="_on_axe_pressed"]
[connection signal="pressed" from="HBoxContainer/Kettle" to="." method="_on_kettle_pressed"]
[connection signal="pressed" from="HBoxContainer/Seed" to="." method="_on_seed_pressed"]
[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
