extends Control


func _on_hoe_pressed() -> void:
	GlobalTool.current_tool = "hoe"
	pass # Replace with function body.


func _on_axe_pressed() -> void:
	GlobalTool.current_tool = "axe"
	pass # Replace with function body.


func _on_kettle_pressed() -> void:
	GlobalTool.current_tool = "kettle"
	pass # Replace with function body.
